EDM-2887: ImageBuild with tasks API
